# raphle

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/raphle/: Cargo.toml
crates/raphle-experimental/: Cargo.toml
crates/raphle-experimental/src/: lib.rs  rwlocked_graph.rs
crates/raphle-graph/: Cargo.toml
crates/raphle-graph/benches/: adjacency_parse_bechmark.rs
crates/raphle-graph/src/: graph.rs
crates/raphle-handlers/: Cargo.toml
crates/raphle-handlers/src/: action.rs  lib.rs  status.rs
crates/raphle/benches/: adjacency_parse_bechmark.rs
crates/raphle/src/: main.rs
data/benches/: ca-HepPh_adj.tsv
data/simple/: easy_adj.csv  easy_adj.tsv
