[workspace]
members = ["crates/*"]
# exclude = [
#     "scripts",
#     "crates/raphle-experiments"
# ]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["ike"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
raphle = { path = "crates/raphle" }
raphle-graph = { path = "crates/raphle-graph" }
