[workspace]
members = ["crates/*"]
exclude = [
#     "scripts",
    "crates/raphle-experimental"
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["ike"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
raphle-graph = { path = "crates/raphle-graph" }
raphle-experimental = { path = "crates/raphle-experimental" }
raphle-handlers = { path = "crates/raphle-handlers" }

csv = "1.3.0"
hashbrown = "0.14.3"
roaring = "0.10.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.5", features = ["macros", "query"] }
serde = { version = "1.0.198", features = ["derive"] }
metrics-process = "1.3.0"
axum-prometheus = "0.6.1"
