[package]
name = "raphle-graph"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
tracing = "0.1.40"
raphle-experimental = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }

[[bench]]
name = "adjacency_parse_benchmark"
path = "./benches/adjacency_parse_bechmark.rs"
harness = false
