[package]
name = "raphle-graph"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
raphle-experimental = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "adjacency_parse_benchmark"
path = "./benches/adjacency_parse_bechmark.rs"
harness = false
