[package]
name = "raphle-handlers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raphle-experimental = { workspace = true }
tracing = { workspace = true }
axum = { version = "0.7.5", features = ["macros", "query"] }
serde = { version = "1.0.198", features = ["derive"] }
